bug 313440 - Make sure to actually construct frames synchronously - don't fallback to alternate content if we have no frame in OnStartRequest r+sr=bz